# fortigate-config-parser

./: .gitignore  .yamllint.yaml  Makefile  README.md  configuration.txt  pyproject.toml  requirements.txt  sample_configuration.txt  setup.cfg  test.py
.github/workflows/: main.yaml
app/: main.py  parsed_configuration.xlsx
app/data/: configuration.cfg
app/modules/: README.md
app/modules/mics/: README.md  main.py
app/outputs/: configuration.json  configuration.xlsx
app/outputs/excel/: interfaces.xlsx
app/outputs/json/: interfaces.json
app/outputs/yaml/: interfaces.yaml
app/templates/: interfaces.ttp  template.ttp
output/: configuration.json  configuration.xlsx  configuration.yaml
outputs/: configuration.json  configuration.xlsx  configuration.yaml
tests/: test_pyproject_cookiecutter.py
